<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".EditorActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="16dp">

            <ImageButton
                android:id="@+id/edit_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/editor_button_description"
                android:src="@drawable/ic_empty" />
            <!-- TODO: Change Image -->
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/editor_instructions"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:text="@string/book_name" />

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_name"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords" />

        </LinearLayout>

        <!-- Section category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:text="@string/book_section" />

            <!-- Section field -->
            <EditText
                android:id="@+id/edit_book_section"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:hint="@string/hint_book_section"
                android:inputType="textCapWords" />

        </LinearLayout>

        <!-- Author category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:text="@string/book_author" />

            <!-- Section field -->
            <EditText
                android:id="@+id/edit_book_author"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:hint="@string/hint_book_author"
                android:inputType="textCapWords" />

        </LinearLayout>

        <!-- Publisher category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:text="@string/book_publisher" />

            <!-- Section field -->
            <EditText
                android:id="@+id/edit_book_publisher"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:hint="@string/hint_book_publisher"
                android:inputType="textCapWords" />

        </LinearLayout>

        <!-- Price category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:text="@string/book_price" />

            <!-- Section field -->
            <EditText
                android:id="@+id/edit_book_price"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:hint="@string/hint_book_price"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <!-- Quantity category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:layout_width="wrap_content"
                android:layout_weight="8"
                android:text="@string/book_quantity" />

            <!-- Section field -->
            <EditText
                android:id="@+id/edit_book_quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:layout_weight="5"
                android:hint="@string/hint_book_quantity"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minus_button"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <Button
                    android:id="@+id/plus_button"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:text="+" />

            </LinearLayout>
        </LinearLayout>

        <!-- Supplier category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:text="@string/book_supplier" />

            <!-- Section field -->
            <EditText
                android:id="@+id/edit_book_supplier"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:hint="@string/hint_book_supplier"
                android:inputType="textCapWords" />

        </LinearLayout>

        <!-- Supplier Phone category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_weight="8"
                android:text="@string/book_supplier_phone" />

            <!-- Section field -->
            <EditText
                android:id="@+id/edit_book_supplier_phone"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_weight="6"
                android:hint="@string/hint_book_supplier_phone"
                android:inputType="phone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/call_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Call" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>